# year-of-the-horse

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  year-of-the-horse.code-workspace
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: apply-grid.ts  cell-encoding.ts  clipboard.ts  dmc-threads.json  dmc.ts  draw-ops.ts  export-files.ts  image-convert.ts  pattern.ts  project-json.ts  stats.ts  symbols.ts  symmetry.ts  types.ts  undo.ts  validation.ts
src/locales/: en.json
src/render/: canvas-draw.ts  viewport.ts
src/ui/: EditorApp.css  EditorApp.tsx  ThemeContext.tsx  i18n.ts
src/workers/: imageWorker.ts
