[package]
name = "year-of-the-horse"
version = "0.1.0"
description = "Year of the Horse — cross-stitch pattern editor"
authors = ["Year of the Horse"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "year_of_the_horse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
